--- a/css/_webdesign.scss
+++ b/css/_webdesign.scss
@@ -65,20 +65,27 @@ span{
     padding-top: 40px;
     .leftOver{
         ul{
+            &.reviOv{
             padding: 20px 0;
            
           li{
                 margin-left: 40px;
-
-                a{
-                    text-decoration: none;
-                    color:#ababab;
+                text-decoration: none;
+                 color:#ababab;
                     font-size: 20px;
-                    font-weight: 600;
-                }
+                     font-weight: 600;
+                     cursor: pointer;
+                // a{
+                //     text-decoration: none;
+                //     color:#ababab;
+                //     font-size: 20px;
+                //     font-weight: 600;
+                // }
             }
         }
     }
+}
+.firstov{
     .whatWill{
        margin-top: 40px;
         background-color:$lightgray;
@@ -87,8 +94,16 @@ span{
           font-weight: bold;
           color:$darkblue;
           font-size: 24px;
+          padding: 20px 0;
+        }
+        ul{
+            li{
+line-height: 30px;
+color:$gray;
+            }
         }
         i{
+        
             font-weight: 700;
             font-size: 13px;
             // margin-right: 30px ;
@@ -100,6 +115,24 @@ span{
         
         }
     }
+
+}
+// .instructor{
+//     h4{
+//         color:#072F60;
+
+//     }
+//     i{
+//         margin: 20px 5px;
+//         text-align: center;
+//         border: 1px solid #eaeaea;
+//         color:$gray;
+//         border-radius: 50%;
+//         padding: 5px 7px;
+//     }
+// }
+
+
 }
 
 
@@ -110,6 +143,8 @@ span{
       width: 85%;
       box-shadow: 5px 0px 15px 0px #aeaeae;
 transform: translateY(-30%);
+// position: sticky;
+// bottom:50%;
 padding-bottom:20px ;
 position: sticky;
  bottom: -30%;
